--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -64,7 +64,7 @@
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         <li>@Html.ActionLink("Добавить игру", "Create", "Games")</li>
-                        <li class="divider"></li>
+                        <li class="divider" style="float: none"></li>
                         <li>@Html.ActionLink("Управление категориями", "Index", "Categories")</li>
                         <li>@Html.ActionLink("Управление комментариями", "Index", "GameComments")</li>
                         <li>@Html.ActionLink("Управление пользователями", "Index", "Customers")</li>
@@ -93,10 +93,8 @@
                 </div>
             </div>
         </div> 
-        <div class="container body-content">
             @RenderBody()
-        </div>
-    </div>
+   </div>
 	<!-- // Обвертка --> 
 <div id="footer">
 		<a href="#home-link" class="home-link">&nbsp;</a>
