--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -93,8 +93,10 @@
                 </div>
             </div>
         </div> 
+        <div class="container body-content">
             @RenderBody()
-   </div>
+        </div>
+    </div>
 	<!-- // Обвертка --> 
 <div id="footer">
 		<a href="#home-link" class="home-link">&nbsp;</a>
