Добавлено создание ленты новостей и новости в нее. Перед соазданием новости надо создать как минимум одну ленту новостей, т.к. новости привязываются к ленте с id=1 по-умолчанию в коде.

--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
             <!-- Навигация -->
             <ul class="nav right clearfix">
                 <li><a href="/">ГЛАВНАЯ</a></li>
-                <li><a href="/">НОВОСТИ</a></li>
+                <li>@Html.ActionLink("НОВОСТИ", "Index", "News")</li> <!-- <li><a href="/">НОВОСТИ</a></li> -->
                 <li>@Html.ActionLink("КОНТАКТЫ", "Contact", "Home")</li>
                 <li>
                     @if (User.IsInRole("admin"))
