--- a/GameShop/GameShop/Views/Categories/Create.cshtml
+++ b/GameShop/GameShop/Views/Categories/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GameShop.Models.Category
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Создать категорию";
 }
 
-<h2>Create</h2>
+<h2>Создать категорию</h2>
 
 
 @using (Html.BeginForm()) 
@@ -25,7 +25,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
