--- a/GameShop/GameShop/Views/Categories/Delete.cshtml
+++ b/GameShop/GameShop/Views/Categories/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model GameShop.Models.Category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены?</h3>
 <div>
-    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +24,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("К списку категорий", "Index")
         </div>
     }
 </div>
