--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
 		<div class="footer-bottom">
 			<div class="center">
 				<a href="/">Главная</a>
-				<a href="/">Новости</a>
+				@Html.ActionLink("НОВОСТИ", "Index", "News")
 				@Html.ActionLink("Контакты", "Contact", "Home")    
 				<p class="right">&copy; 2016 Game-store.ru</p>
 			</div>          
