--- a/GameShop/GameShop/Views/Categories/Edit.cshtml
+++ b/GameShop/GameShop/Views/Categories/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GameShop.Models.Category
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактировать";
 }
 
-<h2>Edit</h2>
+<h2>Редактировать</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -34,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("К списку категорий", "Index")
 </div>
 
 @section Scripts {
